Rating added with class uploads

--- a/home.html
+++ b/home.html
@@ -629,7 +629,7 @@
         </li>
 
 
-        <li class="recently-viewed-post upload">
+        <li class="recently-viewed-post upload upload__class">
           <header>
             <!-- <p class="subject">Physics 1st Paper</p> -->
             <p class="upload-type upload-type-class">Class</p>
@@ -638,8 +638,32 @@
             
           <footer>
             <div class="top">
-              <h4>Physics 1st Paper</h4>
-              <p>Chapter 2: Vector</p>
+              <div class="left">
+                <h4>Physics 1st Paper</h4>
+                <p>Chapter 2: Vector</p>  
+              </div>
+
+              <div class="right rating">
+                <svg>
+                  <use href="icons.svg#icon__star-fill"></use>
+                </svg>
+
+                <svg>
+                  <use href="icons.svg#icon__star-fill"></use>
+                </svg>
+
+                <svg>
+                  <use href="icons.svg#icon__star-fill"></use>
+                </svg>
+
+                <svg>
+                  <use href="icons.svg#icon__star-fill"></use>
+                </svg>
+
+                <svg>
+                  <use href="icons.svg#icon__star-fill"></use>
+                </svg>
+              </div>
             </div>
 
             <div class="bottom">
