Notes and classes page completed (needs some fixes in CSS files)

--- a/notes_classes.html
+++ b/notes_classes.html
@@ -470,10 +470,52 @@
 
 	<div class="subject__cont">
 		<header>
-			<h2 class="header-text">Physics 1st Paper</h2>
-			<h2 class="header-text header-text-2">Chapter 1: Thermodynamics</h2>
+			<div class="left">
+				<h2 class="header-text">Physics 1st Paper</h2>
+				<h2 class="header-text header-text-2">Chapter 1: Thermodynamics</h2>
+			</div>
 
-			<div class="top">
+			<div class="right">
+				<div class="top info-box top__small-box">
+					<div>
+						<p>Total uploads</p>
+						<p>12</p>
+					</div>
+
+					<div>
+						<p>Your uploads</p>
+						<p>10</p>
+					</div>
+				</div>
+
+				<div class="top__small-box info-box">
+					<div>
+						<p>Notes</p>
+						<p>122</p>
+					</div>
+
+					<div>
+						<p>Classes</p>
+						<p>142</p>
+					</div>
+				</div>
+
+				<div class="bottom top__small-box">
+					<h4>You have completed this chapter!</h4>
+
+					<div class="completion_buttons">
+						<svg>
+							<use href="./icons.svg#icon__check-circle-fill"></use>
+						</svg>
+
+						<svg>
+							<use href="./icons.svg#icon__cross-circle"></use>
+						</svg>
+					</div>
+				</div>
+			</div>	
+
+				<!-- <div class="top">
 				<div class="left top__small-box">
 					<h2>Thermodynamics</h2>
 
@@ -539,318 +581,252 @@
 						</div>
 					</div>
 
-				</div>
+				</div> -->
 		</header>
 
 		<main>
+			<header>
+				<div class="top">
+					<button>Notes</button>
+					<button>Class</button>
+				</div>
+
+				<div class="bottom">
+					<!-- <svg>
+						<use href="icons.svg#icon__sort""></use>
+					</svg> -->
+
+					<label for="sort">Sort by:</label>
+					<select name="sort" id="">
+						<option value="">Relevence</option>
+					</select>
+				</div>
+			</header>
+
 			<main class="subjects">
 				<ul>
-					<li class="subject upload">
+					<li class="recently-viewed-post upload">
 						<header>
-							<img src="img/note_cover_2.jpg" alt="">
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
+							<img src="img/note_cover_1.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
 
-					<li class="subject upload">
+					<li class="recently-viewed-post upload">
 						<header>
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
 							<img src="img/note_cover_2.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
 
-					<li class="subject upload">
+					<li class="recently-viewed-post upload">
 						<header>
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
 							<img src="img/note_cover_2.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
 
-					<li class="subject upload">
+
+					<li class="recently-viewed-post upload">
 						<header>
-							<img src="img/note_cover_2.jpg" alt="">
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
+							<img src="img/note_cover_1.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
 
-					<li class="subject upload">
+					<li class="recently-viewed-post upload">
 						<header>
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
 							<img src="img/note_cover_2.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
 
-					<li class="subject upload">
+					<li class="recently-viewed-post upload">
 						<header>
+							<!-- <p class="subject">Physics 1st Paper</p> -->
+							<p class="upload-type">Notes</p>
 							<img src="img/note_cover_2.jpg" alt="">
 						</header>
 
 						<footer>
 							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
+								<h4>Physics 1st Paper</h4>
+								<p>Chapter 2: Vector</p>
 							</div>
 
 							<div class="bottom">
 								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
+									<div class="left">
+										<img src="img/profile_image.jpg" alt="">
+									</div>
+
+									<div class="right">
+										<h4>Sakib UL Hasan</h2>
+											<p>Adamjee Cantonment College</p>
+									</div>
 								</div>
 
 								<div class="right">
-									<p>You have completed this chapter!</p>
+									<svg>
+										<use href="icons.svg#icon__heart"></use>
+									</svg>
+
+									<p>68</p>
 								</div>
 							</div>
 						</footer>
 					</li>
 
-
-					<li class="subject upload">
-						<header>
-							<img src="img/note_cover_2.jpg" alt="">
-						</header>
-
-						<footer>
-							<div class="top">
-								<h4>Chapter 1</h4>
-								<p>Chapters: 10</p>
-
-								<div class="right info_bar">
-									<div class="total_notes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__pages"></use>
-										</svg>
-
-										<p>32</p>
-									</div>
-
-									<div class="total_classes">
-										<svg class="info__icon">
-											<use href="icons.svg#icon__class"></use>
-										</svg>
-
-										<p>22</p>
-									</div>
-								</div>
-							</div>
-
-							<div class="bottom">
-								<div class="left">
-									<svg>
-										<use href="icons.svg#icon__check"></use>
-									</svg>
-								</div>
-
-								<div class="right">
-									<p>You have completed this chapter!</p>
-								</div>
-							</div>
-						</footer>
-					</li>
 				</ul>
 			</main>
 		</main>
