--- a/popups.html
+++ b/popups.html
@@ -24,7 +24,7 @@
         <p>Adamjee Cantonment College</p>
       </div>
       </div>
-      <div class="bottom">
+      <div class="button">
         <button type="submit" class="select-btn-left">Notes</button>
         <button type="submit" class="select-btn-right">Class</button>
       </div>
@@ -55,7 +55,7 @@
         <p>Adamjee Cantonment College</p>
       </div>
       </div>
-      <div class="bottom">
+      <div class="button">
         <button type="submit" class="select-btn-left">Notes</button>
         <button type="submit" class="select-btn-right">Class</button>
       </div>
