--- a/popups.html
+++ b/popups.html
@@ -14,9 +14,9 @@
         <h2>Create Post</h2>
         <svg><use href="icons.svg#icon__exit"></use></svg>
       </div>
-      <div class="top">
+      <div class="profile-top">
       <div class="left">
-        <img src="img/profile_image.jpg" alt="">
+        <img src="img/profile_image.jpg" alt="profile image">
       </div>
 
       <div class="right">
@@ -45,7 +45,7 @@
         <h2>Create Post</h2>
         <svg><use href="icons.svg#icon__exit"></use></svg>
       </div>
-      <div class="top">
+      <div class="profile-top">
       <div class="left">
         <img src="img/profile_image.jpg" alt="">
       </div>
@@ -95,6 +95,13 @@
         </svg>
       </div>
     </div>
+    <div class="form-group">
+      <label for="photo" class="file-upload">
+        <input type="file" id="photo" accept="image/*"> 
+        <svg><use href="icons.svg#icon__add-photo"></use></svg>
+        <span>Add Thumbnail <br> or drag and drop here</span>
+      </label>
+        </div>
     <button type="submit" class="upload-btn">Post</button>
     </div>
       
