--- a/notes_classes.html
+++ b/notes_classes.html
@@ -586,7 +586,7 @@
 
 		<main>
 			<header>
-				<div class="top">
+				<div class="category__select">
 					<button>Notes</button>
 					<button>Class</button>
 				</div>
