--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -107,7 +107,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -138,7 +138,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -146,7 +146,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -177,7 +177,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -185,7 +185,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -216,7 +216,7 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
+                      <div class="left progress_cont">
                         <div class="progress-bar">
                           <div class="bar"></div>
                         </div>
@@ -224,7 +224,7 @@
                       </div>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
@@ -255,12 +255,10 @@
                     </div>
 
                     <div class="bottom">
-                      <div class="left">
-                        <p>Chapter 1: Thermodynamics</p>
-                      </div>
+                      <p>Chapter 1: Thermodynamics</p>
                     </div>
 
-                    <div class="more-bottom">
+                    <div class="more-bottom info_bar">
                       <div class="total_notes">
                         <svg>
                           <use href="icons.svg#icon__pages"></use>
